[package]
name = "nfs-rpc"
description = "Motor ONC-RPC (RFC 5531) sans-IO para libnfs-rs: PDUs, record marking, AUTH_SYS."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
nfs-xdr = { workspace = true }
tokio = { workspace = true, optional = true, features = ["net", "io-util", "time", "rt"] }

[features]
default = []
# Backend de transporte asíncrono basado en tokio.
tokio = ["dep:tokio"]
