[package]
name = "nfs-xdr-derive"
description = "Macros derive XDR (XdrEncode/XdrDecode) para libnfs-rs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
