[package]
name = "nfs-xdr"
description = "Códec XDR (RFC 4506) para libnfs-rs: primitivas, traits y derive."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
nfs-xdr-derive = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["derive"]
# Reexporta las macros derive desde nfs-xdr (ergonomía).
derive = []
